--- a/thesis/00-front.html
+++ b/thesis/00-front.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>The Fate of the Jews &mdash; Front matter</title>
 <!-- #bbinclude "metatags.incl" -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
 <!-- end bbinclude -->
+	<title>The Fate of the Jews &mdash; Front matter</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,6 +17,7 @@
 <main class="container-fluid">
 	<div class="row">
 		<article class="col-md-9">
+			<div id="nav-jh"></div>
 <!-- end bbinclude -->
 <!-- #bbinclude "heading.incl" -->
 <h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
@@ -38,8 +39,6 @@
 		</article><!-- /.col-md-9 -->
 		<aside class="col-md-3">
 			<nav class="navigation" id="nav-hhp"></nav>
-			<hr>
-			<nav id="nav-jh"></nav>
 		</aside>
 <!-- /.col-md-2 -->
 	</div>
