--- a/website/countess.html
+++ b/website/countess.html
@@ -19,46 +19,45 @@
 <main class="container-fluid">
 	<div class="row">
 		<article class="col-md-9">
+			<div id="nav-jh"></div>
 <!-- end bbinclude -->
-<h1>
-	Countess
-</h1>
-<h2>
-	Countess in Alabama, Jan 1994
-</h2>
-<p>
-	In January 1994 I received a prestigious Fellowship from the United States Air Force, and consequently researched in its marvellous WWII air power archives, which were based at Maxwell Air Force Base in Montgomery, Alabama.
-</p>
-<p>
-	Dr Robert Countess, who lived in Birmingham, Alabama, was then a very little known and entirely unimportant theologian (and former military chaplain) who dabbled in revisionism. He had never been anyone of substance in those circles. Certainly my 1991 thesis on the historiography of revisionism had not devoted any attention to him at all; that's what an insignificant fellow he then was.
-</p>
-<p>
-	He telephoned me in my officers' mess room in Alabama after learning from Dr Kitchens, an air force archivist he knew (perhaps through his time as a chaplain), that I was researching in Alabama.
-</p>
-<p>
-	Dr Countess asked if I would like to visit the home of the great black athlete Jesse Owens, which was 150 miles upstate. Having been a long-time Owens fan (I'd even published an article or two on him) I jumped at the chance.
-</p>
-<p>
-	I accompanied Dr Countess upstate, visited the wonderful Owens family, stayed overnight in the Countess home, and returned to Montgomery early the following day after a fifteen minute experience of firing his handgun at tree stumps.
-</p>
-<p>
-	I'm a New Zealander. We have absolutely no handguns (thank God). Even our Police don't carry handguns. So I took the opportunity to try something safely that I would never experience (and have never since experienced) again: firing a handgun. That was all; no big deal.
-</p>
-<p>
-	I did not like Dr Countess very much, and had no further contact with him during my stay. Dr Countess did NOT take me to meet any revisionists and we did not even discuss the Holocaust!
-</p>
-<p>
-	Our limited email contact after my return to New Zealand soon became tense, and I ended correspondence after refusing to debate his foolish assertions about Jewish conspiracies. As he got older through the 1990s he became even crankier. He has passed away, I'm told.
-</p>
-<p>
-	I certainly do not regret meeting the lovely family of Jesse Owens, and still enjoy my photos of that happy day in 1994. I published a poem on that day in my first published poetry collection, <i>Lifeblood</i> (2003). The Owens family experience greatly outweighed the relative discomfort of a day in Dr Countess's company.
-</p>
+			<h1>
+				Countess
+			</h1>
+			<h2>
+				Countess in Alabama, Jan 1994
+			</h2>
+			<p>
+				In January 1994 I received a prestigious Fellowship from the United States Air Force, and consequently researched in its marvellous WWII air power archives, which were based at Maxwell Air Force Base in Montgomery, Alabama.
+			</p>
+			<p>
+				Dr Robert Countess, who lived in Birmingham, Alabama, was then a very little known and entirely unimportant theologian (and former military chaplain) who dabbled in revisionism. He had never been anyone of substance in those circles. Certainly my 1991 thesis on the historiography of revisionism had not devoted any attention to him at all; that's what an insignificant fellow he then was.
+			</p>
+			<p>
+				He telephoned me in my officers' mess room in Alabama after learning from Dr Kitchens, an air force archivist he knew (perhaps through his time as a chaplain), that I was researching in Alabama.
+			</p>
+			<p>
+				Dr Countess asked if I would like to visit the home of the great black athlete Jesse Owens, which was 150 miles upstate. Having been a long-time Owens fan (I'd even published an article or two on him) I jumped at the chance.
+			</p>
+			<p>
+				I accompanied Dr Countess upstate, visited the wonderful Owens family, stayed overnight in the Countess home, and returned to Montgomery early the following day after a fifteen minute experience of firing his handgun at tree stumps.
+			</p>
+			<p>
+				I'm a New Zealander. We have absolutely no handguns (thank God). Even our Police don't carry handguns. So I took the opportunity to try something safely that I would never experience (and have never since experienced) again: firing a handgun. That was all; no big deal.
+			</p>
+			<p>
+				I did not like Dr Countess very much, and had no further contact with him during my stay. Dr Countess did NOT take me to meet any revisionists and we did not even discuss the Holocaust!
+			</p>
+			<p>
+				Our limited email contact after my return to New Zealand soon became tense, and I ended correspondence after refusing to debate his foolish assertions about Jewish conspiracies. As he got older through the 1990s he became even crankier. He has passed away, I'm told.
+			</p>
+			<p>
+				I certainly do not regret meeting the lovely family of Jesse Owens, and still enjoy my photos of that happy day in 1994. I published a poem on that day in my first published poetry collection, <i>Lifeblood</i> (2003). The Owens family experience greatly outweighed the relative discomfort of a day in Dr Countess's company.
+			</p>
 <!-- #bbinclude "nav-hhp.incl" -->
 		</article><!-- /.col-md-9 -->
 		<aside class="col-md-3">
 			<nav class="navigation" id="nav-hhp"></nav>
-			<hr>
-			<nav id="nav-jh"></nav>
 		</aside>
 <!-- /.col-md-2 -->
 	</div>
@@ -79,9 +78,9 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-<!-- end bbinclude --><!-- #bbinclude "footer-js.incl" -->
+<!-- end bbinclude -->
+<!-- #bbinclude "footer-js.incl" -->
 <script src="/_assets/js/footer-js.js"></script>
 <!-- end bbinclude -->
-
 </body>
 </html>
