--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <main class="container-fluid">
 	<div class="row">
 		<article class="col-md-9">
+			<div id="nav-jh"></div>
 <!-- end bbinclude -->
+
 		<h1>
 			Dr. Joel Hayward <small>ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</small>
 		</h1>
@@ -53,8 +55,6 @@
 		</article><!-- /.col-md-9 -->
 		<aside class="col-md-3">
 			<nav class="navigation" id="nav-hhp"></nav>
-			<hr>
-			<nav id="nav-jh"></nav>
 		</aside>
 <!-- /.col-md-2 -->
 	</div>
