--- a/thesis/01-abstract.html
+++ b/thesis/01-abstract.html
@@ -18,6 +18,7 @@
 <main class="container-fluid">
 	<div class="row">
 		<article class="col-md-9">
+			<div id="nav-jh"></div>
 <!-- end bbinclude -->
 <!-- #bbinclude "heading.incl" -->
 <h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
@@ -37,8 +38,6 @@
 		</article><!-- /.col-md-9 -->
 		<aside class="col-md-3">
 			<nav class="navigation" id="nav-hhp"></nav>
-			<hr>
-			<nav id="nav-jh"></nav>
 		</aside>
 <!-- /.col-md-2 -->
 	</div>
