--- a/website/reviewsofhaywardbooks.html
+++ b/website/reviewsofhaywardbooks.html
@@ -19,6 +19,7 @@
 <main class="container-fluid">
 	<div class="row">
 		<article class="col-md-9">
+			<div id="nav-jh"></div>
 <!-- end bbinclude -->
 		<h1>
 			Reviews of Hayward books
@@ -478,8 +479,6 @@
 		</article><!-- /.col-md-9 -->
 		<aside class="col-md-3">
 			<nav class="navigation" id="nav-hhp"></nav>
-			<hr>
-			<nav id="nav-jh"></nav>
 		</aside>
 <!-- /.col-md-2 -->
 	</div>
