--- a/toc.htm
+++ b/toc.htm
@@ -1,69 +1,1 @@
-<!-- #bbpragma doctype="html5" root_element="body" encoding="utf-8" -->
-<nav class="navbar navbar-default">
-	<div class="container-fluid">
-<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button><a class="navbar-brand" href="/index.html">JH</a>
-		</div>
-<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
-				<li class="dropdown"><a href="/thesis/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Thesis <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="/thesis/00-front.html">[Front matter]</a></li>
-					<li><a href="/thesis/01-abstract.html">Abstract</a></li>
-					<li><a href="/thesis/03-acknowledgements.html">Acknowledgements</a></li>
-					<li><a href="/thesis/04-glossary.html">Glossary</a></li>
-					<li><a href="/thesis/05-abbreviations.html">Abbreviations</a></li>
-					<li><a href="/thesis/06-intro.html">Introduction</a></li>
-					<li><a href="/thesis/07-development.html">Development of Revisionism</a></li>
-					<li><a href="/thesis/08-butz.html">Art Butz</a></li>
-					<li><a href="/thesis/09-ihr.html">The IHR</a></li>
-					<li><a href="/thesis/10-leuchter.html">Fred Leuchter</a></li>
-					<li><a href="/thesis/11-irving.html">David Irving</a></li>
-					<li><a href="/thesis/12-conclusion.html">Conclusion</a></li>
-					<li><a href="/thesis/index.html">Appendices</a></li>
-					<li><a href="/thesis/13-biblio.html">Bibliography</a></li>
-					<li><a href="/thesis/14-addendum.html">Addendum (1/26/2000)</a></li>
-				</ul>
-				</li>
-				<li class="dropdown"><a href="/website/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Website <span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li><a href="/website/index.html">Home</a></li>
-					<li><a href="/website/myoverviewoftheaffair.html">My overview</a></li>
-					<li><a href="/website/myoverviewcontd.html">My overview, contd.</a></li>
-					<li><a href="/website/thehistorynowarticle.html">The <i>History Now</i> article</a></li>
-					<li><a href="/website/theweekendheraldarticle.html">The <i>Weekend Herald</i> article</a></li>
-					<li><a href="/website/thesisaddendum.html">Thesis Addendum</a></li>
-					<li><a href="/website/profevansversusdrhayward.html">Prof Evans versus Dr Hayward</a></li>
-					<li><a href="/website/canterburyunissecrecy.html">Canterbury University&rsquo;s secrecy?</a></li>
-					<li><a href="/website/anotherinforequest.html">Another Info. Request</a></li>
-					<li><a href="/website/conflictofinterest.html">Conflict of Interest?</a></li>
-					<li><a href="/website/doyoutrustthelistener.html">Do You Trust The Listener?</a></li>
-					<li><a href="/website/responsetothelistener.html">Response to The Listener</a></li>
-					<li><a href="/website/southlandtimeseditorial.html"><i>Southland Times</i> editorial</a></li>
-					<li><a href="/website/newzealandheraldeditorial.html"><i>New Zealand Herald</i> editorial</a></li>
-					<li><a href="/website/reviewsofhaywardbooks.html">Reviews of Hayward books</a></li>
-					<li><a href="/website/academicarticles.html">Academic articles</a></li>
-					<li><a href="/website/michaelbassettscomments.html">Michael Bassett&rsquo;s comments</a></li>
-					<li><a href="/website/drhaywardandissuesa.html">Dr Hayward and Issues, A</a></li>
-					<li><a href="/website/drhaywardandissuesb.html">Dr Hayward and Issues, B</a></li>
-					<li><a href="/website/journalism.html">Journalism?</a></li>
-					<li><a href="/website/thoughtcrimes.html">Thought Crimes?</a></li>
-					<li><a href="/website/revisionism.html">Revisionism?</a></li>
-					<li><a href="/website/countess.html">Countess</a></li>
-					<li><a href="/website/nizkor2000.html">Nizkor, 2000</a></li>
-					<li><a href="/website/drhaywardssubmissioni.html">Dr Hayward&rsquo;s Submission, i</a></li>
-					<li><a href="/website/drhaywardssubmissionii.html">Dr Hayward&rsquo;s Submission, ii</a></li>
-					<li><a href="/website/drhaywardssubmissioniii.html">Dr Hayward&rsquo;s Submission, iii</a></li>
-					<li><a href="/website/readthethesis.html">Read the Thesis?</a></li>
-					<li><a href="/website/petitiontocanterburyuni.html">Petition to Canterbury University</a></li>
-					<li><a href="/website/index.html">Contact Prof Hayward</a></li>
-				</ul>
-				</li>
-			</ul>
-		</div>
-<!-- /.navbar-collapse -->
-	</div>
-<!-- /.container-fluid -->
-</nav>
+<!-- #bbpragma doctype="html5" root_element="body" encoding="utf-8" --><nav class="navbar navbar-default"><div class="container-fluid"><!-- Brand and toggle get grouped for better mobile display --><div class="navbar-header"><button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button><a class="navbar-brand" href="/index.html">JH</a></div><!-- Collect the nav links, forms, and other content for toggling --><div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"><ul class="nav navbar-nav"><li class="dropdown"><a href="/thesis/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Thesis <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="/thesis/00-front.html">[Front matter]</a></li><li><a href="/thesis/01-abstract.html">Abstract</a></li><li><a href="/thesis/03-acknowledgements.html">Acknowledgements</a></li><li><a href="/thesis/04-glossary.html">Glossary</a></li><li><a href="/thesis/05-abbreviations.html">Abbreviations</a></li><li><a href="/thesis/06-intro.html">Introduction</a></li><li><a href="/thesis/07-development.html">Development of Revisionism</a></li><li><a href="/thesis/08-butz.html">Art Butz</a></li><li><a href="/thesis/09-ihr.html">The IHR</a></li><li><a href="/thesis/10-leuchter.html">Fred Leuchter</a></li><li><a href="/thesis/11-irving.html">David Irving</a></li><li><a href="/thesis/12-conclusion.html">Conclusion</a></li><li><a href="/thesis/index.html">Appendices</a></li><li><a href="/thesis/13-biblio.html">Bibliography</a></li><li><a href="/thesis/14-addendum.html">Addendum (1/26/2000)</a></li></ul></li><li class="dropdown"><a href="/website/index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Website <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="/website/index.html">Home</a></li><li><a href="/website/myoverviewoftheaffair.html">My overview</a></li><li><a href="/website/myoverviewcontd.html">My overview, contd.</a></li><li><a href="/website/thehistorynowarticle.html">The <i>History Now</i> article</a></li><li><a href="/website/theweekendheraldarticle.html">The <i>Weekend Herald</i> article</a></li><li><a href="/website/thesisaddendum.html">Thesis Addendum</a></li><li><a href="/website/profevansversusdrhayward.html">Prof Evans versus Dr Hayward</a></li><li><a href="/website/canterburyunissecrecy.html">Canterbury University&rsquo;s secrecy?</a></li><li><a href="/website/anotherinforequest.html">Another Info. Request</a></li><li><a href="/website/conflictofinterest.html">Conflict of Interest?</a></li><li><a href="/website/doyoutrustthelistener.html">Do You Trust The Listener?</a></li><li><a href="/website/responsetothelistener.html">Response to The Listener</a></li><li><a href="/website/southlandtimeseditorial.html"><i>Southland Times</i> editorial</a></li><li><a href="/website/newzealandheraldeditorial.html"><i>New Zealand Herald</i> editorial</a></li><li><a href="/website/reviewsofhaywardbooks.html">Reviews of Hayward books</a></li><li><a href="/website/academicarticles.html">Academic articles</a></li><li><a href="/website/michaelbassettscomments.html">Michael Bassett&rsquo;s comments</a></li><li><a href="/website/drhaywardandissuesa.html">Dr Hayward and Issues, A</a></li><li><a href="/website/drhaywardandissuesb.html">Dr Hayward and Issues, B</a></li><li><a href="/website/journalism.html">Journalism?</a></li><li><a href="/website/thoughtcrimes.html">Thought Crimes?</a></li><li><a href="/website/revisionism.html">Revisionism?</a></li><li><a href="/website/countess.html">Countess</a></li><li><a href="/website/nizkor2000.html">Nizkor, 2000</a></li><li><a href="/website/drhaywardssubmissioni.html">Dr Hayward&rsquo;s Submission, i</a></li><li><a href="/website/drhaywardssubmissionii.html">Dr Hayward&rsquo;s Submission, ii</a></li><li><a href="/website/drhaywardssubmissioniii.html">Dr Hayward&rsquo;s Submission, iii</a></li><li><a href="/website/readthethesis.html">Read the Thesis?</a></li><li><a href="/website/petitiontocanterburyuni.html">Petition to Canterbury University</a></li><li><a href="/website/index.html">Contact Prof Hayward</a></li></ul></li></ul></div><!-- /.navbar-collapse --></div><!-- /.container-fluid --></nav>
