merge, cut, and trim

--- a/index.html
+++ b/index.html
@@ -2,82 +2,43 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
 <!-- end bbinclude -->
 	<title>Dr. Joel Hayward</title>
 <!-- #bbinclude "siteicons.incl" -->
-<link rel="apple-touch-icon" sizes="180x180" href="/_assets/siteicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/_assets/siteicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/_assets/siteicons/favicon-16x16.png">
-<link rel="manifest" href="/_assets/siteicons/site.webmanifest">
-<link rel="mask-icon" href="/_assets/siteicons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="icon" href="/_assets/siteicons/favicon.ico">
-<meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="msapplication-config" content="/_assets/siteicons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
+<link rel="apple-touch-icon" sizes="180x180" href="/_assets/siteicons/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/_assets/siteicons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/_assets/siteicons/favicon-16x16.png"><link rel="manifest" href="/_assets/siteicons/site.webmanifest"><link rel="mask-icon" href="/_assets/siteicons/safari-pinned-tab.svg" color="#5bbad5"><link rel="icon" href="/_assets/siteicons/favicon.ico"><meta name="msapplication-TileColor" content="#2d89ef"><meta name="msapplication-config" content="/_assets/siteicons/browserconfig.xml"><meta name="theme-color" content="#ffffff">
 <!-- end bbinclude -->
 </head>
 <body>
-<!-- #bbinclude "page-header-small.incl" -->
-<header class="header">
-	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a>
-</header>
-<main class="container-fluid">
-	<div class="row">
-		<article class="col-md-9">
-			<div id="nav-jh"></div>
+<!-- #bbinclude "page-header-small-9.incl" -->
+<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-
-		<h1>
-			Dr. Joel Hayward <small>ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</small>
-		</h1>
-		<p>
-			Dr. Joel Hayward describes himself as a New Zealand scholar, writer, and poet. Dr. Joel Hayward is also a world recognised military historian. Although some people know Dr. Joel Hayward&rsquo;s name because of a masters thesis on Holocaust revisionism that he wrote at Canterbury University in Christchurch over a decade ago, Dr. Joel Hayward is not a Holocaust revisionist and does not support Holocaust revisionism. Dr. Joel Hayward lives in Palmerston North in New Zealand.
-		</p>
-		<dl>
-			<dt>Thesis archive</dt>
-			<dd> <a href="/thesis/index.html">The Fate of Jews in German Hands</a>: An Historical Enquiry into the Development and Significance of Holocaust Revisionism </dd>
-			<dt>Website archive</dt>
-			<dd> <a href="/website/index.html">www.joelhayward.com</a> </dd>
-			<dt>Files on this site</dt>
-			<dd> <a href="/search/index.html">Search</a> </dd>
-		</dl>
-		<hr>
-		<p class="text-center">
-			Copyright &copy; Professor Joel Hayward 2003 &ndash; 2021.<br>
-			The opinions expressed are those of the author and do not reflect the views<br>
-			of the National Defense College or the United Arab Emirates government.
-		</p>
-<!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-9 -->
-		<aside class="col-md-3">
-			<nav class="navigation" id="nav-hhp"></nav>
-		</aside>
-<!-- /.col-md-2 -->
-	</div>
-<!-- /.row -->
-</main>
-<!-- /.container -->
-<!-- end bbinclude -->
-<!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer"></footer><!-- /.container -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
-</script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn&rsquo;t work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-
-<!-- end bbinclude --><!-- #bbinclude "footer-js.incl" -->
+			<h1>
+				Dr. Joel Hayward <small>ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</small>
+			</h1>
+			<p>
+				Dr. Joel Hayward describes himself as a New Zealand scholar, writer, and poet. Dr. Joel Hayward is also a world recognised military historian. Although some people know Dr. Joel Hayward&rsquo;s name because of a masters thesis on Holocaust revisionism that he wrote at Canterbury University in Christchurch over a decade ago, Dr. Joel Hayward is not a Holocaust revisionist and does not support Holocaust revisionism. Dr. Joel Hayward lives in Palmerston North in New Zealand.
+			</p>
+			<dl>
+				<dt>Thesis archive</dt>
+				<dd> <a href="/thesis/index.html">The Fate of Jews in German Hands</a>: An Historical Enquiry into the Development and Significance of Holocaust Revisionism </dd>
+				<dt>Website archive</dt>
+				<dd> <a href="/website/index.html">www.joelhayward.com</a> </dd>
+				<dt>Files on this site</dt>
+				<dd> <a href="/search/index.html">Search</a> </dd>
+			</dl>
+			<hr>
+			<p class="text-center">
+				Copyright &copy; Professor Joel Hayward 2003 &ndash; 2021.<br>
+				The opinions expressed are those of the author and do not reflect the views<br>
+				of the National Defense College or the United Arab Emirates government.
+			</p>
+<!-- #bbinclude "footer-9.incl" -->
+</article><!-- /.col-md-9 --><aside class="col-md-3"><nav class="navigation" id="nav-hhp"></nav></aside><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"></footer><!-- /.container -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="/_assets/js/footer-js.js"></script>
-<!-- end bbinclude -->
 
+<!-- end bbinclude -->
 </body>
 </html>
