--- a/search/index.html
+++ b/search/index.html
@@ -2,109 +2,121 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
 <!-- end bbinclude -->
-	<title>Files on this site</title>
+	<title>Find files on this site</title>
 	<meta name="keywords" content="Joel Hayward, Hayward, thesis, Joel, holocaust, masters, Hayward, canterbury, university, Joel hayward, history, Holocaust, thesis, Canterbury, hayward, history now, university, new zealand, totem press, canterbury university, literature">
 	<meta name="description" content="Joel Hayward's website. Dr Joel Hayward's home pages. Dr Joel Hayward is a military author, scholar and analyst. Controversially persecuted former thesis student at Canterbury University. Joel Hayward.">
+	<style>		.search-form
+		{
+			max-width: 500px;
+			margin: 20px auto;
+		}
+
+		.search-wrapper
+		{
+			display: flex;
+			column-gap: 10px;
+		}
+
+		input[type="text"]
+		{
+			flex: 1;
+			border: 2px solid #ddd;
+			border-radius: 4px;
+			font-size: 16px;
+			padding: 8px 12px;
+		}
+
+		button
+		{
+			background-color: #4285f4;
+			color: #FFF;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 16px;
+			padding: 8px 20px;
+		}
+
+		button:hover { background-color: #357abd; }
+</style>
 </head>
 <body>
-<!-- #bbinclude "page-header-small.incl" -->
-<header class="header">
-	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a>
-</header>
-<main class="container-fluid">
-	<div class="row">
-		<article class="col-md-9">
-			<div id="nav-jh"></div>
+<!-- #bbinclude "page-header-small-9.incl" -->
+<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
-			Search
-		</h1>
-		<ul>
-			<li><a href="/website/amiserablearticle.html">A Miserable Article</a></li>
-			<li><a href="/website/academicarticles.html">Academic articles</a></li>
-			<li><a href="/website/anotherinforequest.html">Another information request</a></li>
-			<li><a href="/website/canterburyunissecrecy.html">Canterbury University&rsquo;s secrecy?</a></li>
-			<li><a href="/website/conflictofinterest.html">Conflict of Interest?</a></li>
-			<li><a href="/website/countess.html">Countess</a></li>
-			<li><a href="/website/doyoutrustthelistener.html">Do You Trust The Listener?</a></li>
-			<li><a href="/website/drhaywardandissuesa.html">Dr Hayward and Issues, A</a></li>
-			<li><a href="/website/drhaywardandissuesb.html">Dr Hayward and Issues, B</a></li>
-			<li><a href="/website/drhaywardssubmissioni.html">Dr Hayward&rsquo;s Submission, i</a></li>
-			<li><a href="/website/drhaywardssubmissionii.html">Dr Hayward&rsquo;s Submission, ii</a></li>
-			<li><a href="/website/drhaywardssubmissioniii.html">Dr Hayward&rsquo;s Submission, iii</a></li>
-			<li><a href="/index.html">Dr. Joel Hayward</a></li>
-			<li><a href="/search/index.html">Files on this site</a></li>
-			<li><a href="/thesis/05-abbreviations.html">The Fate of the Jews &mdash; Abbreviations</a></li>
-			<li><a href="/thesis/01-abstract.html">The Fate of the Jews &mdash; Abstract</a></li>
-			<li><a href="/thesis/03-acknowledgements.html">The Fate of the Jews &mdash; Acknowledgements</a></li>
-			<li><a href="/thesis/14-addendum.html">The Fate of the Jews &mdash; Addendum</a></li>
-			<li><a href="/thesis/08-butz.html">The Fate of the Jews &mdash; Art Butz</a></li>
-			<li><a href="/thesis/13-biblio.html">The Fate of the Jews &mdash; Bibliography</a></li>
-			<li><a href="/thesis/12-conclusion.html">The Fate of the Jews &mdash; Conclusion</a></li>
-			<li><a href="/thesis/11-irving.html">The Fate of the Jews &mdash; David Irving</a></li>
-			<li><a href="/thesis/07-development.html">The Fate of the Jews &mdash; Development of Revisionism</a></li>
-			<li><a href="/thesis/10-leuchter.html">The Fate of the Jews &mdash; Fred Leuchter</a></li>
-			<li><a href="/thesis/00-front.html">The Fate of the Jews &mdash; Front matter</a></li>
-			<li><a href="/thesis/04-glossary.html">The Fate of the Jews &mdash; Glossary</a></li>
-			<li><a href="/thesis/index.html">The Fate of the Jews in German Hands</a></li>
-			<li><a href="/thesis/06-intro.html">The Fate of the Jews &mdash; Introduction</a></li>
-			<li><a href="/thesis/09-ihr.html">The Fate of the Jews &mdash; The IHR</a></li>
-			<li><a href="/website/images.html">Images</a></li>
-			<li><a href="/website/germanjournal.html">German journal</a></li>
-			<li><a href="/website/journalism.html">Journalism?</a></li>
-			<li><a href="/website/koreaneditionofnewbook.html">Korean edition of new book</a></li>
-			<li><a href="/website/michaelbassettscomments.html">Michael Bassett's comments</a></li>
-			<li><a href="/website/myoverviewoftheaffair.html">My overview of &lsquo;The Affair&rsquo;</a></li>
-			<li><a href="/website/myoverviewcontd.html">My overview of &lsquo;The Affair&rsquo;, continued</a></li>
-			<li><a href="/website/newzealandheraldeditorial.html">New Zealand Herald editorial</a></li>
-			<li><a href="/website/nizkor2000.html">Nizkor, 2000</a></li>
-			<li><a href="/website/petitiontocanterburyuni.html">Petition to Canterbury University</a></li>
-			<li><a href="/website/profevansversusdrhayward.html">Prof Evans versus Dr Hayward</a></li>
-			<li><a href="/website/index.html">Prof Joel Hayward&rsquo;s website archive</a></li>
-			<li><a href="/website/purchasedrhaywardsbooks.html">Purchase Dr Hayward&rsquo;s Books</a></li>
-			<li><a href="/website/readthethesis.html">Read the Thesis?</a></li>
-			<li><a href="/website/responsetothelistener.html">Response to The Listener</a></li>
-			<li><a href="/website/reviewsofhaywardbooks.html">Reviews of Joel Hayward books</a></li>
-			<li><a href="/website/revisionism.html">Revisionism?</a></li>
-			<li><a href="/website/southlandtimeseditorial.html">Southland Times editorial</a></li>
-			<li><a href="/website/theeveningstandardarticle.html">The Evening Standard article</a></li>
-			<li><a href="/website/thehistorynowarticle.html">The History Now article</a></li>
-			<li><a href="/website/theweekendheraldarticle.html">The Weekend Herald article</a></li>
-			<li><a href="/website/thesisaddendum.html">Thesis Addendum</a></li>
-			<li><a href="/website/thoughtcrimes.html">Thought Crimes?</a></li>
-		</ul>
-<!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-9 -->
-		<aside class="col-md-3">
-			<nav class="navigation" id="nav-hhp"></nav>
-		</aside>
-<!-- /.col-md-2 -->
-	</div>
-<!-- /.row -->
-</main>
-<!-- /.container -->
-<!-- end bbinclude -->
-<!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer"></footer><!-- /.container -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
-</script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn&rsquo;t work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-
-<!-- end bbinclude -->
-<!-- #bbinclude "footer-js.incl" -->
+			<h1>
+				Search
+			</h1>
+			<form action="https://www.google.com/search" method="get" class="search-form">
+<!-- Hidden input to restrict search to specific domain -->
+				<input type="hidden" name="sitesearch" value="joel-hayward.historiography-project.com">
+				<div class="search-wrapper">
+					<input type="text" name="q" placeholder="Search the Joel Hayward archive ..." required="">
+					<button type="submit">Search</button>
+				</div>
+			</form>
+			<ul>
+				<li><a href="/website/amiserablearticle.html">A Miserable Article</a></li>
+				<li><a href="/website/academicarticles.html">Academic articles</a></li>
+				<li><a href="/website/anotherinforequest.html">Another information request</a></li>
+				<li><a href="/website/canterburyunissecrecy.html">Canterbury University&rsquo;s secrecy?</a></li>
+				<li><a href="/website/conflictofinterest.html">Conflict of Interest?</a></li>
+				<li><a href="/website/countess.html">Countess</a></li>
+				<li><a href="/website/doyoutrustthelistener.html">Do You Trust The Listener?</a></li>
+				<li><a href="/website/drhaywardandissuesa.html">Dr Hayward and Issues, A</a></li>
+				<li><a href="/website/drhaywardandissuesb.html">Dr Hayward and Issues, B</a></li>
+				<li><a href="/website/drhaywardssubmissioni.html">Dr Hayward&rsquo;s Submission, i</a></li>
+				<li><a href="/website/drhaywardssubmissionii.html">Dr Hayward&rsquo;s Submission, ii</a></li>
+				<li><a href="/website/drhaywardssubmissioniii.html">Dr Hayward&rsquo;s Submission, iii</a></li>
+				<li><a href="/index.html">Dr. Joel Hayward</a></li>
+				<li><a href="/search/index.html">Files on this site</a></li>
+				<li><a href="/thesis/05-abbreviations.html">The Fate of the Jews &mdash; Abbreviations</a></li>
+				<li><a href="/thesis/01-abstract.html">The Fate of the Jews &mdash; Abstract</a></li>
+				<li><a href="/thesis/03-acknowledgements.html">The Fate of the Jews &mdash; Acknowledgements</a></li>
+				<li><a href="/thesis/14-addendum.html">The Fate of the Jews &mdash; Addendum</a></li>
+				<li><a href="/thesis/08-butz.html">The Fate of the Jews &mdash; Art Butz</a></li>
+				<li><a href="/thesis/13-biblio.html">The Fate of the Jews &mdash; Bibliography</a></li>
+				<li><a href="/thesis/12-conclusion.html">The Fate of the Jews &mdash; Conclusion</a></li>
+				<li><a href="/thesis/11-irving.html">The Fate of the Jews &mdash; David Irving</a></li>
+				<li><a href="/thesis/07-development.html">The Fate of the Jews &mdash; Development of Revisionism</a></li>
+				<li><a href="/thesis/10-leuchter.html">The Fate of the Jews &mdash; Fred Leuchter</a></li>
+				<li><a href="/thesis/00-front.html">The Fate of the Jews &mdash; Front matter</a></li>
+				<li><a href="/thesis/04-glossary.html">The Fate of the Jews &mdash; Glossary</a></li>
+				<li><a href="/thesis/index.html">The Fate of the Jews in German Hands</a></li>
+				<li><a href="/thesis/06-intro.html">The Fate of the Jews &mdash; Introduction</a></li>
+				<li><a href="/thesis/09-ihr.html">The Fate of the Jews &mdash; The IHR</a></li>
+				<li><a href="/website/images.html">Images</a></li>
+				<li><a href="/website/germanjournal.html">German journal</a></li>
+				<li><a href="/website/journalism.html">Journalism?</a></li>
+				<li><a href="/website/koreaneditionofnewbook.html">Korean edition of new book</a></li>
+				<li><a href="/website/michaelbassettscomments.html">Michael Bassett's comments</a></li>
+				<li><a href="/website/myoverviewoftheaffair.html">My overview of &lsquo;The Affair&rsquo;</a></li>
+				<li><a href="/website/myoverviewcontd.html">My overview of &lsquo;The Affair&rsquo;, continued</a></li>
+				<li><a href="/website/newzealandheraldeditorial.html">New Zealand Herald editorial</a></li>
+				<li><a href="/website/nizkor2000.html">Nizkor, 2000</a></li>
+				<li><a href="/website/petitiontocanterburyuni.html">Petition to Canterbury University</a></li>
+				<li><a href="/website/profevansversusdrhayward.html">Prof Evans versus Dr Hayward</a></li>
+				<li><a href="/website/index.html">Prof Joel Hayward&rsquo;s website archive</a></li>
+				<li><a href="/website/purchasedrhaywardsbooks.html">Purchase Dr Hayward&rsquo;s Books</a></li>
+				<li><a href="/website/readthethesis.html">Read the Thesis?</a></li>
+				<li><a href="/website/responsetothelistener.html">Response to The Listener</a></li>
+				<li><a href="/website/reviewsofhaywardbooks.html">Reviews of Joel Hayward books</a></li>
+				<li><a href="/website/revisionism.html">Revisionism?</a></li>
+				<li><a href="/website/southlandtimeseditorial.html">Southland Times editorial</a></li>
+				<li><a href="/website/theeveningstandardarticle.html">The Evening Standard article</a></li>
+				<li><a href="/website/thehistorynowarticle.html">The History Now article</a></li>
+				<li><a href="/website/theweekendheraldarticle.html">The Weekend Herald article</a></li>
+				<li><a href="/website/thesisaddendum.html">Thesis Addendum</a></li>
+				<li><a href="/website/thoughtcrimes.html">Thought Crimes?</a></li>
+			</ul>
+<!-- #bbinclude "footer-9.incl" -->
+</article><!-- /.col-md-9 --><aside class="col-md-3"><nav class="navigation" id="nav-hhp"></nav></aside><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"></footer><!-- /.container -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="/_assets/js/footer-js.js"></script>
+
 <!-- end bbinclude -->
 </body>
 </html>
