--- a/website/theweekendheraldarticle.html
+++ b/website/theweekendheraldarticle.html
@@ -2,9 +2,7 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
 <!-- end bbinclude -->
 	<title>The Weekend Herald article</title>
@@ -12,14 +10,8 @@
 	<meta name="description" content="Joel Hayward&rsquo;s unfair treatment in the year 2000">
 </head>
 <body>
-<!-- #bbinclude "page-header-small.incl" -->
-<header class="header">
-	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a>
-</header>
-<main class="container-fluid">
-	<div class="row">
-		<article class="col-md-9">
-			<div id="nav-jh"></div>
+<!-- #bbinclude "page-header-small-9.incl" -->
+<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
 		<h1>
 			The <i>Weekend Herald</i> article
@@ -129,33 +121,11 @@
 		<p>
 			<sup>*</sup> Note: What I actually told Ms. Gregory was: <q>When I submitted the thesis I had little idea if I was on the right track. I was not sure if the thesis was excellent, average, or a piece of junk. But I had followed my supervisor's advice, and had not plagiarised or been dishonest, so I thought I'd gain a 'pass'.</q>
 		</p>
-<!-- #bbinclude "nav-hhp.incl" -->
-		</article><!-- /.col-md-9 -->
-		<aside class="col-md-3">
-			<nav class="navigation" id="nav-hhp"></nav>
-		</aside>
-<!-- /.col-md-2 -->
-	</div>
-<!-- /.row -->
-</main>
-<!-- /.container -->
-<!-- end bbinclude -->
-<!-- #bbinclude "footer.incl" -->
-<footer class="container-fluid footer"></footer><!-- /.container -->
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
-</script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn&rsquo;t work if you view the page via file:// -->
-<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-
-<!-- end bbinclude -->
-<!-- #bbinclude "footer-js.incl" -->
+<!-- #bbinclude "footer-9.incl" -->
+</article><!-- /.col-md-9 --><aside class="col-md-3"><nav class="navigation" id="nav-hhp"></nav></aside><!-- /.col-md-2 --></div><!-- /.row --></main><!-- /.container --><footer class="container-fluid footer"></footer><!-- /.container -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="/_assets/js/footer-js.js"></script>
+
 <!-- end bbinclude -->
 </body>
 </html>
