add headings to the website pages

--- a/website/academicarticles.html
+++ b/website/academicarticles.html
@@ -13,9 +13,12 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			Academic articles
-		</h1>
+		</h2>
 		<p>
 			I have published widely in the world's leading defence and military journals.
 		</p>
