--- a/website/michaelbassettscomments.html
+++ b/website/michaelbassettscomments.html
@@ -13,15 +13,19 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			Michael Bassett's comments
-		</h1>
+		</h2>
 		<h3>
 			<a name="5346646"></a> Michael Bassett's thoughts on the "book burning"
 		</h3>
 		<p>
 			Distinguished historian Michael Bassett writes:
 		</p>
+		<blockquote>
 		<p>
 			"As a New Zealand historian and a subscriber to <i>History Today</i>, the magazine that purged the article about Joel Hayward, I can say that the historical community in New Zealand is divided. Several daily papers, including the New Zealand Herald, ran the suppressed article in full, and I had difficulty seeing anything in it that warranted academic suppression. Most of my friends feel the same way. Maybe it's just that most of them, to a greater or lesser extent, have contempt for creeping political correctness and its encroachment on full, vigorous debate where people are allowed to call spades spades.
 		</p>
@@ -31,6 +35,7 @@
 		<p>
 			"Frankly, I think the majority of the historians at Canterbury University have done themselves a disservice by trying to suppress the article about Hayward. At the very least they guaranteed it greater publicity! But censors, in my experience, are usually slow learners".
 		</p>
+		</blockquote>
 		<p>
 			Source:
 		</p>
