--- a/thesis/index.html
+++ b/thesis/index.html
@@ -11,7 +11,7 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-<!-- #bbinclude "heading.incl" -->
+<!-- #bbinclude "heading-thesis.incl" -->
 <h1>The Fate of Jews in German Hands</h1><p class="lead">An Historical Enquiry into the Development and Significance of Holocaust Revisionism</p><p>by <a href="/index.html">Joel S. A. Hayward</a></p><hr>
 <!-- end bbinclude -->
 <p>
