--- a/website/amiserablearticle.html
+++ b/website/amiserablearticle.html
@@ -13,9 +13,12 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			A miserable article
-		</h1>
+		</h2>
 		<h3>
 			Prior experience told me that this journalist had an agenda. I knew it, and worried about the result of his bias, but felt determined to prove that I have done nothing to be ashamed of. I agreed to be interviewed.
 		</h3>
