--- a/website/articles.html
+++ b/website/articles.html
@@ -13,10 +13,12 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			Prof. Joel Hayward&rsquo;s Books and Articles
-		</h1>
-		<nav>
+		</h2>
 			<ul>
 				<li>The Warrior Prophet</li>
 				<li>2023 Claritas Interview </li>
@@ -45,7 +47,6 @@
 				<li>Adolf Hitler and Joint Warfare </li>
 				<li>Lord Nelson Arabic </li>
 			</ul>
-		</nav>
 		<p>
 			Frequently cited by scholars and analysts, Professor Joel Hayward's peer-reviewed scholarly articles, encyclopedia enties and book chapters include this representative selection.
 		</p>
