--- a/website/index.html
+++ b/website/index.html
@@ -13,12 +13,9 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-<h1>
-	Prof. Joel Hayward&rsquo;s website archive
-</h1>
-<p class="lead">
-	<a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS
-</p>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
 <blockquote>
 	<p>
 		"Joel Hayward and his thesis, while being subjected to the full blast of [public] criticism some thought they deserved, should not have been subjected to what amounted to censure from the university. It had, after all, accepted Dr Hayward as a suitable candidate for a Master's degree, supervised his work, and accepted his examiners' assessment. To renege &mdash; to open the thesis to a second assessment &mdash; was to be seen as craven at worst and confused at best".
