--- a/website/petitiontocanterburyuni.html
+++ b/website/petitiontocanterburyuni.html
@@ -13,9 +13,12 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			Petition to the University of Canterbury
-		</h1>
+		</h2>
 		<p>
 			Note: I, Joel Hayward, did not know of the existence of the Petition copied verbatim below until after Associate Professor Martin Lally of Victoria University of Wellington (whom I have never met), acting on his own initiative, created and began circulating it.
 		</p>
