--- a/website/profevansversusdrhayward.html
+++ b/website/profevansversusdrhayward.html
@@ -13,9 +13,12 @@
 <!-- #bbinclude "page-header-small-9.incl" -->
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
-		<h1>
+<!-- #bbinclude "heading-website.incl" -->
+<h1>Prof. Joel Hayward&rsquo;s website archive</h1><p class="lead"><a href="/index.html">Joel Hayward</a>, ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</p><hr>
+<!-- end bbinclude -->
+		<h2>
 			Prof Evans versus Dr Hayward
-		</h1>
+		</h2>
 		<p>
 			I don't dislike or disrespect Professor Richard J. Evans of Cambridge University, or his books, but he certainly does not think much of my 1991 M.A. thesis. In 2003 he criticised it sharply in the New Zealand Herald.
 		</p>
