normalize search and etc.

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/hayward.css" media="screen">
 <!-- end bbinclude -->
-	<title>Find files on this site</title>
+	<title>File not found</title>
 	<meta name="keywords" content="Joel Hayward, Hayward, thesis, Joel, holocaust, masters, Hayward, canterbury, university, Joel hayward, history, Holocaust, thesis, Canterbury, hayward, history now, university, new zealand, totem press, canterbury university, literature">
 	<meta name="description" content="Joel Hayward's website. Dr Joel Hayward's home pages. Dr Joel Hayward is a military author, scholar and analyst. Controversially persecuted former thesis student at Canterbury University. Joel Hayward.">
 	<link rel="stylesheet" href="/_assets/css/search.css" media="screen">
@@ -15,7 +15,7 @@
 <header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project" height="85"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9"><div id="nav-jh"></div>
 <!-- end bbinclude -->
 			<h1>
-				Dr. Joel Hayward <small>ZDaF, BA, MA Hons, PhD, FRSA, FRHistS</small>
+				File not found
 			</h1>
 			<h2>
 				Search the Dr. Joel Hayward archive
