--- a/website/newzealandheraldeditorial.html
+++ b/website/newzealandheraldeditorial.html
@@ -3,7 +3,7 @@
 <head>
 <!-- #bbinclude "metatags.incl" -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/hayward-min.css" media="screen">
+<link rel="stylesheet" href="/_assets/css/hayward.css" media="screen">
 <!-- end bbinclude -->
 	<title>New Zealand Herald editorial</title>
 	<meta name="keywords" content="Joel Hayward, Joel Hayward poet, poetry, author, scholar, Canterbury University">
